[P4ADEV-2100] Save Export File API
